fix: general adjust from SonarQube